# vulkan-guide

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
asset-baker/: CMakeLists.txt  asset_main.cpp
cmake/: AddShader.cmake
extra-engine/: CMakeLists.txt  cvars.cpp  cvars.h  frustum_cull.h  logger.h  material_system.cpp  material_system.h  player_camera.cpp  player_camera.h  string_utils.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_engine_scenerender.cpp  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_profiler.cpp  vk_profiler.h  vk_pushbuffer.cpp  vk_pushbuffer.h  vk_scene.cpp  vk_scene.h  vk_shaders.cpp  vk_shaders.h  vk_textures.cpp  vk_textures.h  vk_types.h
shaders/: tri_mesh_ssbo_instanced_shadowcast.vert
